# legal-ai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/eval/: golden_test_set.yaml  metrics.py  run_eval.py
backend/scripts/: batch_ingest.py  download_samples.py
backend/src/: main.py
backend/src/api/: dependencies.py  models.py
backend/src/api/routes/: __init__.py  admin.py  calculator.py  calendar.py  chat.py  compliance_check.py  contracts.py  health.py  ingest.py  risk_review.py
backend/src/api/utils/: file_parser.py
backend/src/auth/: dependencies.py  jwt.py  password.py  routes.py
backend/src/calculator/: extractor.py  tax_rules.py
backend/src/calendar/: deadline_rules.py
backend/src/compliance_check/: checklists.py  gap_analyzer.py
backend/src/config/: database.py  settings.py
backend/src/contracts/: __init__.py  compliance_rules.py  export_engine.py  form_schemas.py  template_engine.py
backend/src/contracts/templates/: bien_ban_vi_pham.jinja2  hd_dich_vu.jinja2  hd_thu_viec.jinja2  hd_thue_mat_bang.jinja2  hdld_kxdth.jinja2  hdld_xdth.jinja2  (+1 more)
backend/src/core/: acl_filter.py  action_plan_synthesizer.py  audit.py  citation_engine.py  contradiction_detector.py  cross_ref_resolver.py  faq_filter.py  gate.py  model_router.py  plan_limits.py  query_decomposer.py  query_rewriter.py  rag_engine.py  redis_client.py  semantic_cache.py  suggestion_generator.py  usage_tracker.py  validity_filter.py
backend/src/ingestion/: acl_tagger.py  contextual_enricher.py  cross_ref_linker.py  format_router.py  hierarchical_chunker.py  legal_metadata_extractor.py  legal_structure_parser.py  vietnamese_nlp.py
backend/src/reranker/: multilingual_reranker.py
backend/src/retrieval/: bm25_keyword_retriever.py  fusion.py  hierarchical_retriever.py
backend/src/risk_review/: risk_analyzer.py  risk_rules.py
backend/tests/: conftest.py  test_calculator.py  test_calendar.py  test_plan_limits.py
docs/: README.md  (+11 more)
(+52 files in other folders)
